Filter blacklisted supertypes and interfaces